databaze + upload na cloud

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
                 <span>Drag & Drop or Click to Select a File</span>
             </label>
             <input type="file" name="file" id="file" required>
-            <button type="submit" name="submit" onclick="uploadImage()">Upload</button>
+            <button type="submit" name="submit">Upload</button>
         </form>
     </div>
 
